cmake_minimum_required(VERSION 2.6)

PROJECT(QtOpenGLDemo)

FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui QtOpenGL REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

# SET(QT_USE_QTOPENGL 1)

SET(QtOpenGLDemo_SOURCES
	main.cpp
	GLWidget.cpp)

SET(QtOpenGLDemo_MOC_HEADERS
	GLWidget.h)

INCLUDE_DIRECTORIES(${QT_QTOPENGL_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})

INCLUDE(${QT_USE_FILE})

QT4_WRAP_CPP (QtOpenGLDemo_SOURCES ${QtOpenGLDemo_MOC_HEADERS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

ADD_EXECUTABLE(QtOpenGLDemo ${QtOpenGLDemo_SOURCES})
TARGET_LINK_LIBRARIES(QtOpenGLDemo ${QT_LIBRARIES} ${OPENGL_LIBRARIES})
